--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,14 @@
 		"email" : "daniele.artico@cogitoweb.it"
 	}],
 	"require"     : {
-        "sonata-project/user-bundle": "^3.0"
+        "sonata-project/user-bundle": "3.0.*"
     },
     "autoload"    : {
         "psr-4" : { "Cogitoweb\\UserBundle\\" : "" }
-    }
+    },
+	"extra"       : {
+		"branch-alias" : {
+			"dev-master" : "3.0-dev"
+		}
+	}
 }
