Update User properties on password change success

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -29,6 +29,11 @@ fos_user:
     service:
         user_manager:  sonata.user.orm.user_manager  # If you're using doctrine orm (use sonata.user.mongodb.user_manager for mongodb)
 
+    # Cogitoweb: use custom form handler
+    change_password:
+        form:
+            handler: cogitoweb.user.form.handler.change_password_form
+
 doctrine:
     dbal:
         types:
