--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -21,7 +21,7 @@ sonata_block:
 
 fos_user:
     db_driver:     orm # can be orm or odm
-    firewall_name: main
+    firewall_name: admin
     user_class:    Cogitoweb\UserBundle\Entity\User
     group:
         group_class:   Cogitoweb\UserBundle\Entity\Group
