Updated blocks list

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -16,9 +16,11 @@ sonata_user:
 sonata_block:
     default_contexts: [ admin ]
     blocks:
-        sonata.user.block.menu:    # used to display the menu in profile pages
-        sonata.user.block.account: # used to display menu option (login option)
-        sonata.block.service.text: # used to if you plan to use Sonata user routes
+        sonata.user.block.menu:        # used to display the menu in profile pages
+        sonata.user.block.account:     # used to display menu option (login option)
+        sonata.block.service.text:     # used to if you plan to use Sonata user routes
+        sonata.admin.block.admin_list: # enable the SonataAdminBundle block
+            contexts: [ admin ]
 
 fos_user:
     db_driver:     orm # can be orm or odm
