--- a/Resources/config/security.yml
+++ b/Resources/config/security.yml
@@ -4,8 +4,8 @@ security:
         fos_userbundle:
             id: fos_user.user_manager
 
-    encoders:
-        FOS\UserBundle\Model\UserInterface: sha512
+#    encoders:
+#        FOS\UserBundle\Model\UserInterface: sha512
 
     # Cogitoweb: disable security ACL
 #    acl:
