--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
 		"email" : "daniele.artico@cogitoweb.it"
 	}],
 	"require"     : {
-        "sonata-project/user-bundle" : "3.0.*"
+        "sonata-project/user-bundle" : "^3.0"
     },
     "autoload"    : {
         "psr-4" : { "Cogitoweb\\UserBundle\\" : "" }
     },
 	"extra"       : {
 		"branch-alias" : {
-			"dev-master" : "1.1-dev"
+			"dev-master" : "1.2-dev"
 		}
 	}
 }
