Compatibility with SonataUser 4

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		"email" : "daniele.artico@cogitoweb.it"
 	}],
 	"require"     : {
-        "sonata-project/user-bundle" : "^3.0"
+        "sonata-project/user-bundle" : "^3.0||^4.0"
     },
     "autoload"    : {
         "psr-4" : { "Cogitoweb\\UserBundle\\" : "" }
