--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -8,10 +8,10 @@ services:
         tags:
             - { name: kernel.event_subscriber }
 
-    cogitoweb.user.form.handler.change_password_form:
-        class:     Cogitoweb\UserBundle\Form\Handler\ChangePasswordFormHandler
-        arguments: [ "@fos_user.change_password.form", "@request", "@fos_user.user_manager", "%cogitoweb_user.change_password.credentials_expire_at%" ]
-        scope:     request
+#    cogitoweb.user.form.handler.change_password_form:
+#        class:     Cogitoweb\UserBundle\Form\Handler\ChangePasswordFormHandler
+#        arguments: [ "@fos_user.change_password.form", "@request", "@fos_user.user_manager", "%cogitoweb_user.change_password.credentials_expire_at%" ]
+#        scope:     request
 
     security.validator.new_user_password:
         class:     Cogitoweb\UserBundle\Validator\Constraints\NewUserPasswordValidator
